8313206: PKCS11 tests silently skip execution
Reviewed-by: lucy
Backport-of: 7c4aaec0dc74badb8363c10d2a10a29e85ceb246