@@ -61,24 +61,16 @@ import java.util.Set;
 import jdk.test.lib.artifacts.Artifact;
 import jdk.test.lib.artifacts.ArtifactResolver;
 import jdk.test.lib.artifacts.ArtifactResolverException;
+import jtreg.SkippedException;
 
 public abstract class PKCS11Test {
 
-    private boolean enableSM = false;
-
     static final Properties props = System.getProperties();
-
     static final String PKCS11 = "PKCS11";
-
     // directory of the test source
     static final String BASE = System.getProperty("test.src", ".");
-
     static final String TEST_CLASSES = System.getProperty("test.classes", ".");
-
     static final char SEP = File.separatorChar;
-
-    private static final String DEFAULT_POLICY =
-            BASE + SEP + ".." + SEP + "policy";
 
     // Version of the NSS artifact. This coincides with the version of
     // the NSS version
@@ -87,6 +79,25 @@ public abstract class PKCS11Test {
 
     // directory corresponding to BASE in the /closed hierarchy
     static final String CLOSED_BASE;
+    private static final String DEFAULT_POLICY = BASE + SEP + ".." + SEP + "policy";
+    private static final String PKCS11_REL_PATH = "sun/security/pkcs11";
+    private static final char[] HEX_DIGITS = "0123456789abcdef".toCharArray();
+
+    static double nss_version = -1;
+    static ECCState nss_ecc_status = ECCState.Basic;
+
+    // The NSS library we need to search for in getNSSLibDir()
+    // Default is "libsoftokn3.so", listed as "softokn3"
+    // The other is "libnss3.so", listed as "nss3".
+    static String nss_library = "softokn3";
+
+    // NSS versions of each library.  It is simpler to keep nss_version
+    // for quick checking for generic testing than many if-else statements.
+    static double softoken3_version = -1;
+    static double nss3_version = -1;
+    static Provider pkcs11 = newPKCS11Provider();
+    private static String PKCS11_BASE;
+    private static Map<String, String[]> osMap;
 
     static {
         // hack
@@ -101,21 +112,15 @@ public abstract class PKCS11Test {
         System.setProperty("closed.base", CLOSED_BASE);
     }
 
-    // NSS version info
-    public static enum ECCState { None, Basic, Extended };
-    static double nss_version = -1;
-    static ECCState nss_ecc_status = ECCState.Extended;
+    static {
+        try {
+            PKCS11_BASE = getBase();
+        } catch (Exception e) {
+            // ignore
+        }
+    }
 
-    // The NSS library we need to search for in getNSSLibDir()
-    // Default is "libsoftokn3.so", listed as "softokn3"
-    // The other is "libnss3.so", listed as "nss3".
-    static String nss_library = "softokn3";
-
-    // NSS versions of each library.  It is simplier to keep nss_version
-    // for quick checking for generic testing than many if-else statements.
-    static double softoken3_version = -1;
-    static double nss3_version = -1;
-    static Provider pkcs11 = newPKCS11Provider();
+    private boolean enableSM = false;
 
     // Utility methods
     // Used to backport HexFormat from 17.
@@ -152,7 +157,7 @@ public abstract class PKCS11Test {
     }
 
     public static Provider newPKCS11Provider() {
-        ServiceLoader sl = ServiceLoader.load(java.security.Provider.class);
+        ServiceLoader<Provider> sl = ServiceLoader.load(java.security.Provider.class);
         Iterator<Provider> iter = sl.iterator();
         Provider p = null;
         boolean found = false;
@@ -170,8 +175,8 @@ public abstract class PKCS11Test {
         // Nothing found through ServiceLoader; fall back to reflection
         if (!found) {
             try {
-                Class clazz = Class.forName("sun.security.pkcs11.SunPKCS11");
-                p = (Provider) clazz.newInstance();
+                Class<?> clazz = Class.forName("sun.security.pkcs11.SunPKCS11");
+                p = (Provider) clazz.getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 ex.printStackTrace();
             }
@@ -205,38 +210,6 @@ public abstract class PKCS11Test {
         return p.configure(config);
     }
 
-    public abstract void main(Provider p) throws Exception;
-
-    protected boolean skipTest(Provider p) {
-        return false;
-    }
-
-    private void premain(Provider p) throws Exception {
-        if (skipTest(p)) {
-            return;
-        }
-
-        // set a security manager and policy before a test case runs,
-        // and disable them after the test case finished
-        try {
-            if (enableSM) {
-                System.setSecurityManager(new SecurityManager());
-            }
-            long start = System.currentTimeMillis();
-            System.out.printf(
-                    "Running test with provider %s (security manager %s) ...%n",
-                        p.getName(), enableSM ? "enabled" : "disabled");
-            main(p);
-            long stop = System.currentTimeMillis();
-            System.out.println("Completed test with provider " + p.getName() +
-                " (" + (stop - start) + " ms).");
-        } finally {
-            if (enableSM) {
-                System.setSecurityManager(null);
-            }
-        }
-    }
-
     public static void main(PKCS11Test test) throws Exception {
         main(test, null);
     }
@@ -261,9 +234,39 @@ public abstract class PKCS11Test {
         Provider[] oldProviders = Security.getProviders();
         try {
             System.out.println("Beginning test run " + test.getClass().getName() + "...");
-            testDefault(test);
-            testNSS(test);
-            testDeimos(test);
+            boolean skippedDefault = false;
+            boolean skippedNSS = false;
+            boolean skippedDeimos = false;
+
+            // Use separate try-catch for each test to allow all test run
+            try {
+                testDefault(test);
+            } catch (SkippedException se) {
+                System.out.println("testDefault: Skipped");
+                skippedDefault = true;
+                se.printStackTrace(System.out);
+            }
+
+            try {
+                testNSS(test);
+            } catch (SkippedException se) {
+                System.out.println("testNSS: Skipped");
+                skippedNSS = true;
+                se.printStackTrace(System.out);
+            }
+
+            try {
+                testDeimos(test);
+            } catch (SkippedException se) {
+                System.out.println("testDeimos: Skipped");
+                skippedDeimos = true;
+                se.printStackTrace(System.out);
+            }
+
+            if (skippedDefault && skippedNSS && skippedDeimos) {
+                throw new SkippedException("All tests are skipped, check logs");
+            }
+
         } finally {
             // NOTE: Do not place a 'return' in any finally block
             // as it will suppress exceptions and hide test failures.
@@ -273,7 +276,7 @@ public abstract class PKCS11Test {
             // useful for ./Provider/Login.sh, where a SecurityManager exists.
             if (oldProviders.length == newProviders.length) {
                 found = false;
-                for (int i = 0; i<oldProviders.length; i++) {
+                for (int i = 0; i < oldProviders.length; i++) {
                     if (oldProviders[i] != newProviders[i]) {
                         found = true;
                         break;
@@ -281,10 +284,10 @@ public abstract class PKCS11Test {
                 }
             }
             if (found) {
-                for (Provider p: newProviders) {
+                for (Provider p : newProviders) {
                     Security.removeProvider(p.getName());
                 }
-                for (Provider p: oldProviders) {
+                for (Provider p : oldProviders) {
                     Security.addProvider(p);
                 }
             }
@@ -292,42 +295,49 @@ public abstract class PKCS11Test {
     }
 
     public static void testDeimos(PKCS11Test test) throws Exception {
-        if (new File("/opt/SUNWconn/lib/libpkcs11.so").isFile() == false ||
-            "true".equals(System.getProperty("NO_DEIMOS"))) {
+        System.out.println("===> testDeimos: Starting test run");
+        if ("true".equals(System.getProperty("NO_DEIMOS"))) {
+            System.out.println("Skip Deimos software as test configured with NO_DEIMOS");
             return;
         }
+
+        if (!new File("/opt/SUNWconn/lib/libpkcs11.so").isFile()) {
+            throw new SkippedException("testDeimos: \"/opt/SUNWconn/lib/libpkcs11.so\" " +
+                    "file required for Deimos not found");
+        }
+
         String base = getBase();
         String p11config = base + SEP + "nss" + SEP + "p11-deimos.txt";
         Provider p = getSunPKCS11(p11config);
         test.premain(p);
+        System.out.println("testDeimos: Completed");
     }
 
+    // Run test for default configured PKCS11 providers (if any)
     public static void testDefault(PKCS11Test test) throws Exception {
-        // run test for default configured PKCS11 providers (if any)
+        System.out.println("===> testDefault: Starting test run");
+        boolean foundPKCS11 = false;
 
         if ("true".equals(System.getProperty("NO_DEFAULT"))) {
+            System.out.println("Skip default provider as test configured with NO_DEFAULT");
             return;
         }
 
         Provider[] providers = Security.getProviders();
-        for (int i = 0; i < providers.length; i++) {
-            Provider p = providers[i];
+        for (Provider p : providers) {
             if (p.getName().startsWith("SunPKCS11-")) {
+                foundPKCS11 = true;
                 test.premain(p);
             }
         }
-    }
 
-    private static String PKCS11_BASE;
-    static {
-        try {
-            PKCS11_BASE = getBase();
-        } catch (Exception e) {
-            // ignore
+        if (!foundPKCS11) {
+            throw new SkippedException("testDefault: Skip default test as SunPKCS11 " +
+                    "provider is not configured");
         }
-    }
 
-    private final static String PKCS11_REL_PATH = "sun/security/pkcs11";
+        System.out.println("testDefault: Completed");
+    }
 
     public static String getBase() throws Exception {
         if (PKCS11_BASE != null) {
@@ -341,7 +351,7 @@ public abstract class PKCS11Test {
             }
             cwd = cwd.getParentFile();
             if (cwd == null) {
-                throw new Exception("Test root directory not found");
+                throw new RuntimeException("Test root directory not found");
             }
         }
         PKCS11_BASE = new File(cwd, PKCS11_REL_PATH.replace('/', SEP)).getAbsolutePath();
@@ -373,7 +383,7 @@ public abstract class PKCS11Test {
         String[] nssLibDirs = getNssLibPaths(osid);
         if (nssLibDirs == null) {
             System.out.println("Warning: unsupported OS: " + osid
-                    + ", please initialize NSS librarys location firstly, skipping test");
+                    + ", please initialize NSS library location, skipping test");
             return null;
         }
         if (nssLibDirs.length == 0) {
@@ -390,7 +400,7 @@ public abstract class PKCS11Test {
             }
         }
         if (nssLibPath == null) {
-            System.out.println("Warning: can't find NSS librarys on this machine, skipping test");
+            System.out.println("Warning: can't find NSS library on this machine, skipping test");
             return null;
         }
         return nssLibPath;
@@ -403,9 +413,8 @@ public abstract class PKCS11Test {
         } else if (osName.equals("Mac OS X")) {
             osName = "MacOSX";
         }
-        String osid = osName + "-" + props.getProperty("os.arch") + "-"
+        return osName + "-" + props.getProperty("os.arch") + "-"
                 + props.getProperty("sun.arch.data.model");
-        return osid;
     }
 
     static boolean isBadNSSVersion(Provider p) {
@@ -418,7 +427,7 @@ public abstract class PKCS11Test {
         return false;
     }
 
-    protected static void safeReload(String lib) throws Exception {
+    protected static void safeReload(String lib) {
         try {
             System.load(lib);
         } catch (UnsatisfiedLinkError e) {
@@ -428,11 +437,9 @@ public abstract class PKCS11Test {
         }
     }
 
-    static boolean loadNSPR(String libdir) throws Exception {
+    static boolean loadNSPR(String libdir) {
         // load NSS softoken dependencies in advance to avoid resolver issues
-        String dir = libdir.endsWith(File.separator)
-                     ? libdir
-                     : libdir + File.separator;
+        String dir = libdir.endsWith(File.separator) ? libdir : libdir + File.separator;
         safeReload(dir + System.mapLibraryName("nspr4"));
         safeReload(dir + System.mapLibraryName("plc4"));
         safeReload(dir + System.mapLibraryName("plds4"));
@@ -443,7 +450,7 @@ public abstract class PKCS11Test {
 
     // Check the provider being used is NSS
     public static boolean isNSS(Provider p) {
-        return p.getName().toUpperCase().equals("SUNPKCS11-NSS");
+        return p.getName().equalsIgnoreCase("SUNPKCS11-NSS");
     }
 
     static double getNSSVersion() {
@@ -539,25 +546,25 @@ public abstract class PKCS11Test {
 
         // the index after whitespace after nssHeader
         int afterheader = s.indexOf("NSS", i) + 4;
-        String version = String.valueOf(s.charAt(afterheader));
+        StringBuilder version = new StringBuilder(String.valueOf(s.charAt(afterheader)));
         for (char c = s.charAt(++afterheader);
-                c == '.' || (c >= '0' && c <= '9');
-                c = s.charAt(++afterheader)) {
-            version += c;
+             c == '.' || (c >= '0' && c <= '9');
+             c = s.charAt(++afterheader)) {
+            version.append(c);
         }
 
         // If a "dot dot" release, strip the extra dots for double parsing
-        String[] dot = version.split("\\.");
+        String[] dot = version.toString().split("\\.");
         if (dot.length > 2) {
-            version = dot[0]+"."+dot[1];
+            version = new StringBuilder(dot[0] + "." + dot[1]);
             for (int j = 2; dot.length > j; j++) {
-                version += dot[j];
+                version.append(dot[j]);
             }
         }
 
         // Convert to double for easier version value checking
         try {
-            nss_version = Double.parseDouble(version);
+            nss_version = Double.parseDouble(version.toString());
         } catch (NumberFormatException e) {
             System.out.println("===== Content start =====");
             System.out.println(s);
@@ -567,7 +574,7 @@ public abstract class PKCS11Test {
             e.printStackTrace();
         }
 
-        System.out.print("lib" + library + " version = "+version+".  ");
+        System.out.print("library: " + library + ", version: " + version + ".  ");
 
         // Check for ECC
         if (s.indexOf("Basic") > 0) {
@@ -596,13 +603,15 @@ public abstract class PKCS11Test {
 
     // Run NSS testing on a Provider p configured with test nss config
     public static void testNSS(PKCS11Test test) throws Exception {
+        System.out.println("===> testNSS: Starting test run");
         String nssConfig = getNssConfig();
         if (nssConfig == null) {
-            // issue loading libraries
-            return;
+            throw new SkippedException("testNSS: Problem loading NSS libraries");
         }
+
         Provider p = getSunPKCS11(nssConfig);
         test.premain(p);
+        System.out.println("testNSS: Completed");
     }
 
     public static String getNssConfig() throws Exception {
@@ -611,7 +620,7 @@ public abstract class PKCS11Test {
             return null;
         }
 
-        if (loadNSPR(libdir) == false) {
+        if (!loadNSPR(libdir)) {
             return null;
         }
 
@@ -649,12 +658,12 @@ public abstract class PKCS11Test {
 
         if (kcProp == null) {
             throw new RuntimeException(
-            "\"AlgorithmParameters.EC SupportedCurves property\" not found");
+                    "\"AlgorithmParameters.EC SupportedCurves property\" not found");
         }
 
         System.out.println("Finding supported curves using list from SunEC\n");
         index = 0;
-        for (;;) {
+        for (; ; ) {
             // Each set of curve names is enclosed with brackets.
             begin = kcProp.indexOf('[', index);
             end = kcProp.indexOf(']', index);
@@ -671,12 +680,12 @@ public abstract class PKCS11Test {
             end = kcProp.indexOf(',', begin);
             if (end == -1) {
                 // Only one name in the set.
-                end = index -1;
+                end = index - 1;
             }
 
             curve = kcProp.substring(begin, end);
             getSupportedECParameterSpec(curve, p)
-                .ifPresent(spec -> results.add(spec));
+                    .ifPresent(spec -> results.add(spec));
         }
 
         if (results.size() == 0) {
@@ -687,9 +696,9 @@ public abstract class PKCS11Test {
     }
 
     static Optional<ECParameterSpec> getSupportedECParameterSpec(String curve,
-            Provider p) throws Exception {
+                                                                 Provider p) throws Exception {
         ECParameterSpec e = getECParameterSpec(p, curve);
-        System.out.print("\t "+ curve + ": ");
+        System.out.print("\t " + curve + ": ");
         try {
             KeyPairGenerator kpg = KeyPairGenerator.getInstance("EC", p);
             kpg.initialize(e);
@@ -711,25 +720,12 @@ public abstract class PKCS11Test {
             throws Exception {
 
         AlgorithmParameters parameters =
-            AlgorithmParameters.getInstance("EC", p);
+                AlgorithmParameters.getInstance("EC", p);
 
         parameters.init(new ECGenParameterSpec(name));
 
         return parameters.getParameterSpec(ECParameterSpec.class);
     }
-
-    // Check support for a curve with a provided Vector of EC support
-    boolean checkSupport(List<ECParameterSpec> supportedEC,
-            ECParameterSpec curve) {
-        for (ECParameterSpec ec: supportedEC) {
-            if (ec.equals(curve)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private static Map<String,String[]> osMap;
 
     // Location of the NSS libraries on each supported platform
     private static Map<String, String[]> getOsMap() {
@@ -742,23 +738,23 @@ public abstract class PKCS11Test {
         osMap.put("SunOS-sparcv9-64", new String[] { "/usr/lib/mps/64/" });
         osMap.put("SunOS-x86-32", new String[] { "/usr/lib/mps/" });
         osMap.put("SunOS-amd64-64", new String[] { "/usr/lib/mps/64/" });
-        osMap.put("Linux-i386-32", new String[] {
+        osMap.put("Linux-i386-32", new String[]{
                 "/usr/lib/i386-linux-gnu/",
                 "/usr/lib32/",
-                "/usr/lib/" });
-        osMap.put("Linux-amd64-64", new String[] {
+                "/usr/lib/"});
+        osMap.put("Linux-amd64-64", new String[]{
                 "/usr/lib/x86_64-linux-gnu/",
                 "/usr/lib/x86_64-linux-gnu/nss/",
-                "/usr/lib64/" });
-        osMap.put("Linux-ppc64-64", new String[] { "/usr/lib64/" });
-        osMap.put("Linux-ppc64le-64", new String[] { "/usr/lib64/" });
-        osMap.put("Linux-s390x-64", new String[] { "/usr/lib64/" });
-        osMap.put("Windows-x86-32", new String[] {});
-        osMap.put("Windows-amd64-64", new String[] {});
-        osMap.put("MacOSX-x86_64-64", new String[] {});
-        osMap.put("Linux-arm-32", new String[] {
+                "/usr/lib64/"});
+        osMap.put("Linux-ppc64-64", new String[]{"/usr/lib64/"});
+        osMap.put("Linux-ppc64le-64", new String[]{"/usr/lib64/"});
+        osMap.put("Linux-s390x-64", new String[]{"/usr/lib64/"});
+        osMap.put("Windows-x86-32", new String[]{});
+        osMap.put("Windows-amd64-64", new String[]{});
+        osMap.put("MacOSX-x86_64-64", new String[]{});
+        osMap.put("Linux-arm-32", new String[]{
                 "/usr/lib/arm-linux-gnueabi/nss/",
-                "/usr/lib/arm-linux-gnueabihf/nss/" });
+                "/usr/lib/arm-linux-gnueabihf/nss/"});
         // Exclude linux-aarch64 at the moment until the following bug is fixed:
         // 8296631: NSS tests failing on OL9 linux-aarch64 hosts
 //        osMap.put("Linux-aarch64-64", new String[] {
@@ -799,7 +795,7 @@ public abstract class PKCS11Test {
             }
         }
 
-        return nssLibPaths.toArray(new String[nssLibPaths.size()]);
+        return nssLibPaths.toArray(new String[0]);
     }
 
     private final static char[] hexDigits = "0123456789abcdef".toCharArray();
@@ -822,8 +818,8 @@ public abstract class PKCS11Test {
             if (i != 0) {
                 sb.append(':');
             }
-            sb.append(hexDigits[k >>> 4]);
-            sb.append(hexDigits[k & 0xf]);
+            sb.append(HEX_DIGITS[k >>> 4]);
+            sb.append(HEX_DIGITS[k & 0xf]);
         }
         return sb.toString();
     }
@@ -869,20 +865,11 @@ public abstract class PKCS11Test {
         }
     }
 
-    <T> T[] concat(T[] a, T[] b) {
-        if ((b == null) || (b.length == 0)) {
-            return a;
-        }
-        T[] r = Arrays.copyOf(a, a.length + b.length);
-        System.arraycopy(b, 0, r, a.length, b.length);
-        return r;
-    }
-
     /**
      * Returns supported algorithms of specified type.
      */
     static List<String> getSupportedAlgorithms(String type, String alg,
-            Provider p) {
+                                               Provider p) {
         // prepare a list of supported algorithms
         List<String> algorithms = new ArrayList<>();
         Set<Provider.Service> services = p.getServices();
@@ -920,7 +907,7 @@ public abstract class PKCS11Test {
 
     static byte[] generateData(int length) {
         byte data[] = new byte[length];
-        for (int i=0; i<data.length; i++) {
+        for (int i = 0; i < data.length; i++) {
             data[i] = (byte) (i % 256);
         }
         return data;
@@ -928,23 +915,23 @@ public abstract class PKCS11Test {
 
     private static String fetchNssLib(String osId) {
         switch (osId) {
-        case "Windows-amd64-64":
-            return fetchNssLib(WINDOWS_X64.class);
+            case "Windows-amd64-64":
+                return fetchNssLib(WINDOWS_X64.class);
 
-        case "MacOSX-x86_64-64":
-            return fetchNssLib(MACOSX_X64.class);
+            case "MacOSX-x86_64-64":
+                return fetchNssLib(MACOSX_X64.class);
 
-        case "MacOSX-aarch64-64":
-             return fetchNssLib(MACOSX_AARCH64.class);
+            case "MacOSX-aarch64-64":
+                return fetchNssLib(MACOSX_AARCH64.class);
 
-        case "Linux-amd64-64":
-            return fetchNssLib(LINUX_X64.class);
+            case "Linux-amd64-64":
+                return fetchNssLib(LINUX_X64.class);
 
-        case "Linux-aarch64-64":
-            return fetchNssLib(LINUX_AARCH64.class);
+            case "Linux-aarch64-64":
+                return fetchNssLib(LINUX_AARCH64.class);
 
-        default:
-            return null;
+            default:
+                return null;
         }
     }
 
@@ -966,6 +953,58 @@ public abstract class PKCS11Test {
         }
         Policy.setPolicy(null); // Clear the policy created by JIB if any
         return path;
+    }
+
+    public abstract void main(Provider p) throws Exception;
+
+    protected boolean skipTest(Provider p) {
+        return false;
+    }
+
+    private void premain(Provider p) throws Exception {
+        if (skipTest(p)) {
+            return;
+        }
+
+        // set a security manager and policy before a test case runs,
+        // and disable them after the test case finished
+        try {
+            if (enableSM) {
+                System.setSecurityManager(new SecurityManager());
+            }
+            long start = System.currentTimeMillis();
+            System.out.printf(
+                    "Running test with provider %s (security manager %s) ...%n",
+                    p.getName(), enableSM ? "enabled" : "disabled");
+            main(p);
+            long stop = System.currentTimeMillis();
+            System.out.println("Completed test with provider " + p.getName() +
+                    " (" + (stop - start) + " ms).");
+        } finally {
+            if (enableSM) {
+                System.setSecurityManager(null);
+            }
+        }
+    }
+
+    // Check support for a curve with a provided Vector of EC support
+    boolean checkSupport(List<ECParameterSpec> supportedEC,
+                         ECParameterSpec curve) {
+        for (ECParameterSpec ec : supportedEC) {
+            if (ec.equals(curve)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    <T> T[] concat(T[] a, T[] b) {
+        if ((b == null) || (b.length == 0)) {
+            return a;
+        }
+        T[] r = Arrays.copyOf(a, a.length + b.length);
+        System.arraycopy(b, 0, r, a.length, b.length);
+        return r;
     }
 
     protected void setCommonSystemProps() {
@@ -993,40 +1032,46 @@ public abstract class PKCS11Test {
                 StandardCopyOption.REPLACE_EXISTING);
     }
 
+    // NSS version info
+    public static enum ECCState {None, Basic, Extended}
+
     @Artifact(
             organization = NSSLIB,
             name = "nsslib-windows_x64",
             revision = NSS_BUNDLE_VERSION,
             extension = "zip")
-    private static class WINDOWS_X64 { }
+    private static class WINDOWS_X64 {
+    }
 
     @Artifact(
             organization = NSSLIB,
             name = "nsslib-macosx_x64",
             revision = NSS_BUNDLE_VERSION,
             extension = "zip")
-    private static class MACOSX_X64 { }
+    private static class MACOSX_X64 {
+    }
 
     @Artifact(
             organization = NSSLIB,
             name = "nsslib-macosx_aarch64",
             revision = NSS_BUNDLE_VERSION,
             extension = "zip")
-    private static class MACOSX_AARCH64 { }
+    private static class MACOSX_AARCH64 {
+    }
 
     @Artifact(
             organization = NSSLIB,
             name = "nsslib-linux_x64",
             revision = NSS_BUNDLE_VERSION,
             extension = "zip")
-    private static class LINUX_X64 { }
+    private static class LINUX_X64 {
+    }
 
     @Artifact(
             organization = NSSLIB,
             name = "nsslib-linux_aarch64",
             revision = NSS_BUNDLE_VERSION,
-            extension = "zip"
-    )
+            extension = "zip")
     private static class LINUX_AARCH64{
     }
 }
